<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text14"
        android:text="@string/hint_name"/>
    <TextView
        android:id="@+id/text_confirm_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text14"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/hint_email"/>
    <TextView
        android:id="@+id/text_confirm_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text14"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/hint_mobile"/>
    <TextView
        android:id="@+id/text_confirm_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text14"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/hint_address"/>
    <TextView
        android:id="@+id/text_confirm_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text14"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/text_card_type"/>
    <TextView
        android:id="@+id/text_confirm_card_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text14"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/text_card_number"/>
    <TextView
        android:id="@+id/text_confirm_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text14"/>
</LinearLayout>