<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/includes_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_cart_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_toolbar"
        android:layout_above="@+id/linear_summary_container"
        android:layout_margin="@dimen/margin8"/>

    <LinearLayout
        android:id="@+id/linear_empty_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/layout_toolbar"
        android:layout_above="@+id/linear_summary_container"
        android:visibility="gone"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text14"
            android:textColor="@color/black"
            android:text="@string/text_cart_no_items" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_summary_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_foorter"
        android:padding="@dimen/padding8"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text12"
                android:textColor="@color/black"
                android:text="@string/text_total_items"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/text_total_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text12"
                android:textColor="@color/black"
                android:gravity="right"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin8">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text12"
                android:textColor="@color/black"
                android:text="@string/text_total_amount"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/text_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text12"
                android:textColor="@color/black"
                android:gravity="right"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_foorter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/padding8">
        <Button
            android:id="@+id/button_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"/>
    </LinearLayout>
</RelativeLayout>